# logq

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  program.md
benches/: bench_datasource.rs  bench_execution.rs  bench_parser.rs  bench_sort.rs  bench_udf.rs  logq_benchmark.rs
benches/helpers/: mod.rs  queries.rs  synthetic.rs
docs/: architecture.md  perf-analysis.md
docs/plans/: 2026-04-04-datasource-format-tests-design-final.md  2026-04-04-datasource-format-tests-design.md  2026-04-04-datasource-format-tests-plan.md  2026-04-04-microbenchmarks-design-final.md  2026-04-04-microbenchmarks-design-v2.md  2026-04-04-microbenchmarks-design.md  2026-04-04-microbenchmarks-plan-v2.md  2026-04-04-microbenchmarks-plan.md  2026-04-04-partiql-completion-design-final.md  2026-04-04-partiql-completion-design-v2.md  2026-04-04-partiql-completion-design.md  2026-04-04-partiql-implementation-plan.md  2026-04-04-udf-registry-design-final.md  2026-04-04-udf-registry-design-v2.md  2026-04-04-udf-registry-design.md  2026-04-04-udf-registry-plan-final.md  2026-04-04-udf-registry-plan.md  2026-04-05-multi-table-design-final.md  2026-04-05-multi-table-design-v2.md  2026-04-05-multi-table-design.md  2026-04-05-multi-table-plan-final.md  2026-04-05-multi-table-plan-v2.md  2026-04-05-multi-table-plan.md  2026-04-05-simd-physical-plan-design-final.md  2026-04-05-simd-physical-plan-design-v2.md  2026-04-05-simd-physical-plan-design.md  2026-04-05-simd-physical-plan-plan-final.md  2026-04-05-simd-physical-plan-plan-v2.md  2026-04-05-simd-physical-plan-plan.md  2026-04-06-large-file-throughput-design-final.md  2026-04-06-large-file-throughput-design-v2.md  2026-04-06-large-file-throughput-design.md  2026-04-06-large-file-throughput-plan.md  2026-04-06-selective-parsing-design-final.md  2026-04-06-selective-parsing-design-v2.md  2026-04-06-selective-parsing-design.md  2026-04-06-selective-parsing-plan.md  2026-04-06-simd-design-review-1.md  2026-04-06-simd-design-review-2.md  2026-04-06-simd-implementation-plan.md  (+59 more)
scripts/: check_autovec.sh  elb_log_generator.rb
src/: app.rs  ast.rs  classic_load_balancer_log_field.rs  classic_load_balancer_log_record.rs  cli.yml  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  reader.rs  string_record.rs  token.rs
src/common/: types.rs
src/datasource/: in_memory_stream.rs  mod.rs  reader.rs
src/execution/: aggregate.rs  batch.rs  batch_distinct.rs  batch_filter.rs  batch_groupby.rs  batch_limit.rs  batch_orderby.rs  batch_predicate.rs  batch_project.rs  batch_scan.rs  batch_streaming_groupby.rs  batch_tokenizer.rs  datasource.rs  execution.rs  field_analysis.rs  field_parser.rs  filter.rs  log_schema.rs  logic.rs  map.rs  mod.rs  parallel.rs  prefix_sort.rs  relation.rs  stream.rs  types.rs
src/functions/: arithmetic.rs  array.rs  bitwise.rs  datetime.rs  host.rs  json.rs  map.rs  mod.rs  regexp.rs  registry.rs  string.rs  type_conversion.rs  url.rs
src/logical/: mod.rs  optimizer.rs  parser.rs  types.rs
src/simd/: bitmap.rs  filter_cache.rs  kernels.rs  mod.rs  padded_vec.rs  selection.rs
src/syntax/: ast.rs  desugar.rs  lexer.rs  mod.rs  parser.rs  token.rs
tests/: custom_function.rs
