[package]
name = "logq"
description = "A web-server log file command line toolkit with SQL interface"
repository = "https://github.com/MnO2/logq"
version = "0.1.4"
license = "MIT"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["log", "sql", "query", "search"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["/benches/**", "/.travis.yml", "/data/**"]

[badges]
travis-ci = { repository = "MnO2/logq" }
codecov = { repository = "MnO2/logq" }

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
regex = "1.1.7"
failure = "0.1.5"
hashbrown = "0.5"
ordered-float = "1.0"
nom = "5.0"
prettytable-rs = "^0.8"
chrono = "0.4"
url = "2.1.0"
csv = "1.1"
lazy_static = "1.3.0"
json = "0.11.15"
tdigest = "0.2"

[dev-dependencies]
criterion = "0.2"
rand = "0.7"

[[bench]]
name = "logq_benchmark"
harness = false
path = "./benches/logq_benchmark.rs"
