[package]
name = "logq"
description = "A web-server log file command line toolkit with SQL interface"
repository = "https://github.com/MnO2/logq"
version = "0.1.18"
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["log", "sql", "query", "search"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["/benches/**", "/.travis.yml", "/data/**"]

[badges]
travis-ci = { repository = "MnO2/logq" }
codecov = { repository = "MnO2/logq" }

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
regex = "1.4"
failure = "0.1"
hashbrown = "0.5"
ordered-float = "2.0"
nom = "6.0.1"
prettytable-rs = "^0.8"
chrono = "0.4"
url = "2.2.0"
csv = "1.1"
lazy_static = "1.4.0"
json = "0.12"
tdigest = "0.2"
pdatastructs = "0.6.0"
linked-hash-map = "0.5.3"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
tempfile = "3.1.0"

[[bench]]
name = "logq_benchmark"
harness = false
path = "./benches/logq_benchmark.rs"
