[package]
name = "logq"
description = "A web-server log file command line toolkit with SQL interface"
repository = "https://github.com/MnO2/logq"
version = "0.1.19"
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["log", "sql", "query", "search"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["/benches/**", "/.travis.yml", "/data/**"]

[features]
bench-internals = []

[badges]
travis-ci = { repository = "MnO2/logq" }
codecov = { repository = "MnO2/logq" }

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
regex = "1.5"
thiserror = "1"
hashbrown = "0.11"
ordered-float = "2.8"
nom = "7.0"
prettytable-rs = "^0.10"
chrono = "0.4"
url = "2.2"
csv = "1.1"
lazy_static = "1.4.0"
json = "0.12"
tdigest = "0.2"
pdatastructs = "0.6.0"
linked-hash-map = "0.5"
anyhow = "1.0"
lru = "0.12"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
tempfile = "3.2"
linked-hash-map = "0.5"

[[bench]]
name = "bench_parser"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "bench_execution"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "bench_datasource"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "bench_udf"
harness = false

[[bench]]
name = "bench_sort"
harness = false
required-features = ["bench-internals"]
